--- a/capstone/vue/public/index.html
+++ b/capstone/vue/public/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="stylesheet" href="https://kit.fontawesome.com/14c83a701f.css" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/14c83a701f.js" crossorigin="anonymous"></script>
     <title>final-vue-capstone-seed</title>
   </head>
   <body>
